# smart-desk-calendar

./: README.md
3D Models/: .gitignore  case.SLDPRT  epaper_7in5.SLDPRT  smart desk calendar.SLDASM
3D Models/Case/: Back cover.SLDPRT  Case.SLDPRT  Stand.SLDPRT
3D Models/Export/: Case.3MF
3D Models/Modules/: Battery LiIon 3000mAh.SLDPRT  Circuit Board.SLDASM  Circuit Mount Case.SLDPRT  E-Paper Driver HAT.SLDPRT  ESP32.SLDPRT  Floor.SLDPRT  PCB.SLDPRT  User Library-DTSM-2.sldprt
firmware/: Cargo.toml  README.md  sdkconfig.defaults
firmware/.cargo/: config.toml
firmware/src/: app.rs  board.rs  calendar.rs  clear_nvs.rs  common.rs  display.rs  font.rs  http.rs  main.rs  sleep.rs
gui/: .gitignore  Cargo.toml
gui/examples/: simulator.rs  to-image.rs
gui/src/: circle.rs  common.rs  display.rs  draw.rs  font.rs  lib.rs  text.rs
gui/src/components/: activity.rs  calendar.rs  date.rs  mod.rs  small_clock.rs  weekday.rs
gui/src/page/: main_page.rs
ics-parser/: .gitignore  Cargo.toml
ics-parser/examples/: example.rs
ics-parser/src/: lib.rs
ics-parser/tests/data/: moodle.ics  ntust.ics
