[package]
name = "firmware"
version = "0.1.0"
authors = ["Hayden Chang <m831718@gmail.com>"]
edition = "2021"
resolver = "2"
rust-version = "1.77"

[[bin]]
name = "firmware"
harness = false   # do not use the built in cargo test harness -> resolve rust-analyzer errors

[profile.release]
opt-level = "s"

[profile.dev]
debug = true    # Symbols are nice and they don't increase the size on Flash
opt-level = "z"

[features]
default = ["std", "embassy", "esp-idf-svc/native"]

pio = ["esp-idf-svc/pio"]
std = ["alloc", "esp-idf-svc/binstart", "esp-idf-svc/std"]
alloc = ["esp-idf-svc/alloc"]
nightly = ["esp-idf-svc/nightly"]
experimental = ["esp-idf-svc/experimental"]
embassy = [
    "esp-idf-svc/embassy-sync",
    "esp-idf-svc/critical-section",
    "esp-idf-svc/embassy-time-driver",
]

[dependencies]
chrono = { version = "0.4.38", default-features = false, features = ["std"] }
log = { version = "0.4", default-features = false }
esp-idf-svc = { version = "0.49", default-features = false }
epd-waveshare = { git = "https://github.com/caemor/epd-waveshare", features = [
    "graphics",
] }
anyhow = "1.0.86"
embedded-graphics = "0.8.1"
u8g2-fonts = "0.4.0"
esp-idf-sys = "0.35.0"
chrono-tz = "0.9.0"
gui = { path = "../gui" }

[build-dependencies]
embuild = "0.32.0"
