[package]
name = "firmware"
version = "0.1.0"
authors = ["Hayden Chang <m831718@gmail.com>"]
edition = "2021"
resolver = "2"
rust-version = "1.77"

[[bin]]
name = "firmware"
harness = false   # do not use the built in cargo test harness -> resolve rust-analyzer errors

[profile.release]
opt-level = "s"

[profile.dev]
debug = true    # Symbols are nice and they don't increase the size on Flash
opt-level = "z"

[features]
default = []
experimental = ["esp-idf-svc/experimental"]

[dependencies]
chrono = { version = "0.4.38", default-features = false, features = ["std"] }
log = "0.4"
esp-idf-svc = { version = "0.49", features = [
    "critical-section",
    "embassy-time-driver",
    "embassy-sync",
] }
epd-waveshare = { git = "https://github.com/caemor/epd-waveshare", features = [
    "graphics",
] }
anyhow = "1.0.86"
embedded-graphics = "0.8.1"
u8g2-fonts = "0.4.0"
chrono-tz = "0.10.0"
gui = { path = "../gui" }
embedded-svc = "0.28.0"
iso8601 = { version = "0.6.1", features = ["chrono"] }

[build-dependencies]
embuild = "0.32.0"
cc = "=1.1.30"     # Necessary until a new version of `esp-idf-sys` is released
